--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ h1, h2, h3, h4, h5, h6 {
   <div class="jg-container jg-padding-64" id="contact">
     <h1>Contacto</h1>
     <p class="jg-xlarge">Teléfono: 635 53 22 80</p>
-    <a class="jg-xlarge fa fa-whatsapp" href="https://wa.me/+34635532280">  Whatsapp - Click aquí</a>
+    <a class="jg-xlarge jg-button jg-black" style="text-decoration: none; border-radius: 20px;" href="https://wa.me/+34635532280">Contactar por Whatsapp</a>
     </form>
   </div>
   
