--- a/index.html
+++ b/index.html
@@ -243,8 +243,7 @@
     <div class="jg-container jg-padding-64" id="contact">
       <h1>Contacto</h1>
       <p class="jg-xlarge">Teléfono: 635 53 22 80</p>
-      <a class="jg-xlarge jg-button jg-black" style="text-decoration: none; border-radius: 20px;"
-        href="https://wa.me/+34635532280">Contactar por Whatsapp</a>
+      <a class="jg-xlarge jg-button jg-black" style="text-decoration: none; border-radius: 20px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;" href="https://wa.me/+34635532280">Contactar por Whatsapp</a>
       </form>
     </div>
 
