--- a/index.html
+++ b/index.html
@@ -2,9 +2,29 @@
 <html>
 
 <head>
-  <title>Es Fortí Suites</title>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/x-icon" href="./images/salon.jpg">
+  <meta name="description"
+    content="Alquila el mejor piso en Es Fortí Suites, Palma de Mallorca. Disfruta de una estancia cómoda y acogedora en este encantador barrio. ¡Reserva ahora y vive una experiencia inolvidable!">
+  <meta name="keywords"
+    content="piso en alquiler, Es Fortí Suites, Palma de Mallorca, alquiler vacacional, apartamento amueblado, alojamiento, estancia cómoda">
+  <meta name="language" content="Spanish">
+  <meta http-equiv="Content-Language" content="es">
+  <meta name="author" content="Es Fortí Suites">
+  <meta property="og:title" content="Es Fortí Suites | Tu hogar en Palma de Mallorca">
+  <meta property="og:description"
+    content="Alquila el mejor piso en Es Fortí Suites, Palma de Mallorca. Disfruta de una estancia cómoda y acogedora en este encantador barrio. ¡Reserva ahora y vive una experiencia inolvidable!">
+  <meta property="og:image" content="https://esfortisuites.netlify.app/images/salon.jpg">
+  <meta property="og:url" content="https://esfortisuites.netlify.app/">
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="Es Fortí Suites | Tu hogar en Palma de Mallorca">
+  <meta name="twitter:description"
+    content="Alquila el mejor piso en Es Fortí Suites, Palma de Mallorca. Disfruta de una estancia cómoda y acogedora en este encantador barrio. ¡Reserva ahora y vive una experiencia inolvidable!">
+  <meta name="twitter:image" content="https://esfortisuites.netlify.app/images/salon.jpg">
+  <title>Es Fortí Suites - Alquiler de piso en Palma de Mallorca</title>
   <link rel="stylesheet" href="./css/jg.css">
   <script src="https://kit.fontawesome.com/3e6664068e.js" crossorigin="anonymous"></script>
   <style>
@@ -243,7 +263,9 @@
     <div class="jg-container jg-padding-64" id="contact">
       <h1>Contacto</h1>
       <p class="jg-xlarge">Teléfono: 635 53 22 80</p>
-      <a class="jg-xlarge jg-button jg-black" style="text-decoration: none; border-radius: 20px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;" href="https://wa.me/+34635532280">Contactar por Whatsapp</a>
+      <a class="jg-xlarge jg-button jg-black"
+        style="text-decoration: none; border-radius: 20px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;"
+        href="https://wa.me/+34635532280">Contactar por Whatsapp</a>
       </form>
     </div>
 
